Show favicon for about:treestyletab-group tab correctly on Firefox 22 and later (#521)
Because URIs like "chrome://treestyletab/skin/group/group-icon#-moz-resolution=16,16" doesn't work, if the chrome URL is defined by "override" directive.

--- a/skin/classic/treestyletab/group.css
+++ b/skin/classic/treestyletab/group.css
@@ -27,7 +27,7 @@
 }
 
 .icon {
-	list-style-image: url("chrome://treestyletab/skin/group/group-icon");
+	list-style-image: url("chrome://treestyletab-group/skin/group.png");
 /*
 	list-style-image: url("chrome://global/skin/icons/folder-item.png");
 	-moz-image-region: rect(0, 32px, 16px, 16px);
